apps/adguard-home/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
      app.kubernetes.io/instance: adguard-home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/instance: adguard-home
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: adguard-home
          # renovate: datasource=docker
          image: adguard/adguardhome:v0.107.30
          imagePullPolicy: IfNotPresent
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: initial-config
              mountPath: /tmp/AdGuardHome.yaml
              subPath: AdGuardHome.yaml
            - name: config
              mountPath: /opt/adguardhome/conf
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: initial-config
          configMap:
            name: initial-config
        - name: config
          persistentVolumeClaim:
            claimName: config
