apps/adguard-home/templates/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dashboard
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
