apps/adguard-home/templates/dns-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-tcp
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard-home
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.86.225
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
