apps/adguard-home/templates/dns-udp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-udp
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.225
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
