apps/adguard-home/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.lachlan.io`)
      kind: Rule
      services:
        - name: adguard-home-dashboard
          port: 3000
